Small QOL refactor of ModulesManager