@@ -1,14 +1,13 @@
 package mc.owls.valley.net.feathercore.core;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Queue;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import mc.owls.valley.net.feathercore.api.common.Cache;
 import mc.owls.valley.net.feathercore.api.common.Pair;
@@ -20,22 +19,32 @@ import mc.owls.valley.net.feathercore.api.core.FeatherModule;
 import mc.owls.valley.net.feathercore.api.core.IFeatherCoreProvider;
 import mc.owls.valley.net.feathercore.api.core.IFeatherListener;
 import mc.owls.valley.net.feathercore.api.core.IFeatherLogger;
-
 import mc.owls.valley.net.feathercore.api.exception.FeatherSetupException;
 import mc.owls.valley.net.feathercore.modules.configuration.components.bukkit.BukkitConfigFile;
 
 public class ModulesManager {
 
     private static class ModuleConfig {
-        public Set<String> dependencies = new HashSet<>();
+        public Set<String> dependencies = null;
         public FeatherModule instance = null;
         public boolean mandatory = false;
-        public List<String> listeners = new ArrayList<>();
-        public List<Pair<String, String>> commands = new ArrayList<>();
+        public List<String> listeners = null;
+        public List<Pair<String, String>> commands = null;
     }
 
+    private static class InitializationData {
+        public Map<String, ModuleConfig> moduleConfigs = new HashMap<>();
+        public Set<String> enabledModules = new HashSet<>();
+
+        public void clear() {
+            this.moduleConfigs.clear();
+            this.enabledModules.clear();
+        }
+    }
+
+    private InitializationData init = new InitializationData();
+
     private Map<String, FeatherModule> modules = new HashMap<>();
-    private Set<String> enabledModules = new HashSet<>();
     private List<String> enableOrder = new ArrayList<>();
 
     @SuppressWarnings("unchecked")
@@ -43,52 +52,65 @@ public class ModulesManager {
         return (T) this.modules.get(name);
     }
 
+    /**
+     * This method should be used only in FeatherModule.onEnable(core)
+     * 
+     * @note After ModulesManager.onEnable(core) was finished, this method will
+     *       always return false
+     * @param name of the module
+     * @return true if the module was enabled before the time of calling,
+     *         false otherwise
+     */
     public boolean isModuleEnabled(final String name) {
-        return this.enabledModules.contains(name);
+        return this.init.enabledModules.contains(name);
     }
 
     public void onEnable(final IFeatherCoreProvider core) throws FeatherSetupException {
-        final var modules = loadModules(core);
-        this.enableOrder = computeEnableOrder(modules);
+        this.init.clear();
+        this.modules.clear();
+        this.enableOrder.clear();
 
-        this.modules = modules.entrySet().stream()
-                .collect(Collectors.toMap(Map.Entry::getKey, entry -> entry.getValue().instance));
+        loadModules(core);
+        computeEnableOrder();
 
-        enableModules(core, this.enableOrder, modules);
+        this.init.moduleConfigs.forEach((moduleName, moduleConfig) -> {
+            this.modules.put(moduleName, moduleConfig.instance);
+        });
 
-        for (final var module : modules.keySet()) {
-            if (!this.enabledModules.contains(module)) {
-                this.modules.remove(module);
-                this.enableOrder.remove(module);
-            }
-        }
+        enableModules(core);
+        doPostEnableCleanup();
     }
 
     public void onDisable(final IFeatherLogger logger) {
         disableModules(logger);
     }
 
-    private Map<String, ModuleConfig> loadModules(final IFeatherCoreProvider core) throws FeatherSetupException {
-        final Map<String, ModuleConfig> modules = new HashMap<>();
-
-        final var modulesConfig = YamlUtils.loadYaml(core.getPlugin(), FeatherCore.FEATHER_CORE_YML)
+    /**
+     * Load modules configs from file
+     * 
+     * @param core
+     * @throws FeatherSetupException
+     */
+    void loadModules(final IFeatherCoreProvider core) throws FeatherSetupException {
+        final var config = YamlUtils.loadYaml(core.getPlugin(), FeatherCore.FEATHER_CORE_YML)
                 .getConfigurationSection("modules");
 
         final var plugin = core.getPlugin();
         final var pluginClass = plugin.getClass();
 
-        for (final var moduleName : modulesConfig.getKeys(false)) {
-            final var moduleConfig = modulesConfig.getConfigurationSection(moduleName);
+        for (final var moduleName : config.getKeys(false)) {
+            final var moduleConfig = config.getConfigurationSection(moduleName);
 
             // 1. create module config
             final var module = new ModuleConfig();
-            modules.put(moduleName, module);
+            this.init.moduleConfigs.put(moduleName, module);
 
             // 2. create module instance
             final var moduleClass = moduleConfig.getString("class");
             try {
-                final var clazz = Class.forName(moduleClass);
-                module.instance = (FeatherModule) clazz.getConstructor(String.class).newInstance(moduleName);
+                module.instance = (FeatherModule) Class.forName(moduleClass)
+                        .getConstructor(String.class)
+                        .newInstance(moduleName);
             } catch (final Exception e) {
                 throw new FeatherSetupException("Could not generate instance of class " + moduleClass + "\nReason: "
                         + StringUtils.exceptionToStr(e));
@@ -104,24 +126,19 @@ public class ModulesManager {
             module.commands = new ArrayList<>();
             final var commandsConfig = moduleConfig.getConfigurationSection("commands");
             if (commandsConfig != null) {
-                for (final var commandName : commandsConfig.getKeys(false)) {
-                    module.commands.add(Pair.of(commandName, commandsConfig.getString(commandName)));
-                }
+                commandsConfig.getKeys(false).forEach(commandName -> module.commands
+                        .add(Pair.of(commandName, commandsConfig.getString(commandName))));
             }
 
             // 6. set dependencies
-            for (final var dependency : moduleConfig.getStringList("dependencies")) {
-                module.dependencies.add(dependency);
-            }
+            module.dependencies = new HashSet<>(moduleConfig.getStringList("dependencies"));
 
-            // 7. set module cache
+            // 7. set core module cache
             final var cacheFieldName = moduleConfig.getString("cache-field");
-
             if (cacheFieldName.isEmpty()) {
                 throw new FeatherSetupException(
                         "Missing literal on '" + moduleName + "', please contact the developer");
             }
-
             try {
                 final var field = pluginClass.getDeclaredField(cacheFieldName);
                 field.setAccessible(true);
@@ -134,35 +151,35 @@ public class ModulesManager {
         }
 
         // check if dependencies are actual modules
-        for (final var moduleEntry : modules.entrySet()) {
+        for (final var moduleEntry : this.init.moduleConfigs.entrySet()) {
             final var moduleName = moduleEntry.getKey();
-            final var moduleData = moduleEntry.getValue();
+            final var moduleConfig = moduleEntry.getValue();
 
-            for (final var dependency : moduleData.dependencies) {
-                if (modules.get(dependency) == null) {
+            for (final var dependency : moduleConfig.dependencies) {
+                if (!this.init.moduleConfigs.containsKey(dependency)) {
                     throw new FeatherSetupException("Dependency '" + dependency + "' of module '" + moduleName
                             + "' does not name any valid module");
                 }
             }
         }
-
-        return modules;
     }
 
-    private List<String> computeEnableOrder(final Map<String, ModuleConfig> moduleConfigs)
-            throws FeatherSetupException {
-        final List<String> order = new ArrayList<>();
-
+    /**
+     * Self explanatory
+     * 
+     * @throws FeatherSetupException
+     */
+    void computeEnableOrder() throws FeatherSetupException {
         // 1. build the graph and compute in-degrees
-        final Map<String, HashSet<String>> graph = new HashMap<>();
-        final Map<String, Integer> inDegrees = new HashMap<>();
+        final var graph = new HashMap<String, HashSet<String>>();
+        final var inDegrees = new HashMap<String, Integer>();
 
-        for (final var moduleName : moduleConfigs.keySet()) {
+        for (final var moduleName : this.init.moduleConfigs.keySet()) {
             inDegrees.put(moduleName, 0);
             graph.put(moduleName, new HashSet<>());
         }
 
-        for (final var entry : moduleConfigs.entrySet()) {
+        for (final var entry : this.init.moduleConfigs.entrySet()) {
             final var moduleName = entry.getKey();
             for (final var dependency : entry.getValue().dependencies) {
                 graph.get(dependency).add(moduleName);
@@ -171,7 +188,7 @@ public class ModulesManager {
         }
 
         // 2. perform topological sort using Kahn's algorithm
-        final Queue<String> queue = new LinkedList<>();
+        final Queue<String> queue = new ArrayDeque<>();
         for (final var entry : inDegrees.entrySet()) {
             if (entry.getValue() == 0) {
                 queue.add(entry.getKey());
@@ -180,7 +197,7 @@ public class ModulesManager {
 
         while (!queue.isEmpty()) {
             final var moduleName = queue.poll();
-            order.add(moduleName);
+            this.enableOrder.add(moduleName);
 
             for (final var neighhbor : graph.get(moduleName)) {
                 inDegrees.put(neighhbor, inDegrees.get(neighhbor) - 1);
@@ -191,21 +208,27 @@ public class ModulesManager {
         }
 
         // check for cycles
-        if (order.size() != moduleConfigs.size()) {
+        if (this.enableOrder.size() != this.init.moduleConfigs.size()) {
             throw new FeatherSetupException(
                     "There is a cycle in the dependency graph of modules configuration. This is weird O.o, please contact the developer");
         }
-
-        return order;
     }
 
-    private void enableModules(final IFeatherCoreProvider core, final List<String> enableOrder,
-            final Map<String, ModuleConfig> moduleConfigs) throws FeatherSetupException {
+    /**
+     * Enable modules taking into account if the module was or not enabled in config
+     * 
+     * @param core
+     * @throws FeatherSetupException
+     */
+    private void enableModules(final IFeatherCoreProvider core) throws FeatherSetupException {
         final IConfigFile modulesEnabledConfig = new BukkitConfigFile(core.getPlugin(), "modules.yml");
+
+        final var plugin = core.getPlugin();
+        final var pluginManager = plugin.getServer().getPluginManager();
 
         for (final var moduleName : enableOrder) {
             // try to enable the module
-            final var module = moduleConfigs.get(moduleName);
+            final var module = this.init.moduleConfigs.get(moduleName);
             final var configEnabled = modulesEnabledConfig.getBoolean(moduleName, true);
 
             if (!configEnabled && !module.mandatory) {
@@ -214,26 +237,24 @@ public class ModulesManager {
 
             module.instance.onEnable(core);
 
-            this.enabledModules.add(moduleName);
+            this.init.enabledModules.add(moduleName);
 
             // register commands
-            final var plugin = core.getPlugin();
             for (final var command : module.commands) {
                 final var commandName = command.first;
                 final var commandClass = command.second;
 
                 try {
                     final var clazz = Class.forName(commandClass);
-                    final var constructor = clazz.getConstructor();
                     final var method = clazz.getMethod("onCreate", IFeatherCoreProvider.class);
-                    method.setAccessible(true);
-
-                    final var instance = (FeatherCommand<?>) constructor.newInstance();
-                    method.invoke(instance, core);
-
+                    final var cmdInstance = (FeatherCommand<?>) clazz.getConstructor().newInstance();
                     final var cmd = plugin.getCommand(commandName);
-                    cmd.setExecutor(instance);
-                    cmd.setTabCompleter(instance);
+
+                    method.setAccessible(true);
+                    method.invoke(cmdInstance, core);
+
+                    cmd.setExecutor(cmdInstance);
+                    cmd.setTabCompleter(cmdInstance);
                 } catch (final Exception e) {
                     throw new FeatherSetupException(
                             "Could not setup command " + commandName + "\nReason: " + StringUtils.exceptionToStr(e));
@@ -241,18 +262,16 @@ public class ModulesManager {
             }
 
             // register listeners
-            final var pluginManager = plugin.getServer().getPluginManager();
             for (final var listenerClass : module.listeners) {
                 try {
                     final var clazz = Class.forName(listenerClass);
-                    final var constructor = clazz.getConstructor();
                     final var method = clazz.getMethod("onCreate", IFeatherCoreProvider.class);
+                    final var listenerInstance = (IFeatherListener) clazz.getConstructor().newInstance();
+
                     method.setAccessible(true);
+                    method.invoke(listenerInstance, core);
 
-                    final var instance = (IFeatherListener) constructor.newInstance();
-                    method.invoke(instance, core);
-
-                    pluginManager.registerEvents(instance, plugin);
+                    pluginManager.registerEvents(listenerInstance, plugin);
                 } catch (final Exception e) {
                     throw new FeatherSetupException(
                             "Could not setup listener " + listenerClass + "\nReason: " + StringUtils.exceptionToStr(e));
@@ -260,6 +279,17 @@ public class ModulesManager {
             }
 
         }
+    }
+
+    private void doPostEnableCleanup() {
+        for (final var module : modules.keySet()) {
+            if (!this.init.enabledModules.contains(module)) {
+                this.modules.remove(module);
+                this.enableOrder.remove(module);
+            }
+        }
+
+        this.init.clear();
     }
 
     private void disableModules(final IFeatherLogger logger) {
